[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UI/LevelMap.gd" type="Script" id=1]

[node name="LevelMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 360.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 138.0
margin_top = 66.0
margin_right = 221.0
margin_bottom = 134.0

[node name="Level1" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Main Menu"
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
